--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -11,3 +11,13 @@
   grid-template-columns: repeat(auto-fit, 413px);
   gap: 40px 20px;
 }
+
+@media screen and (max-width: 672px) {
+  .cards__list {
+    grid-template-columns: repeat(auto-fit, 288px);
+  }
+
+  .cards {
+    padding: 20px 16px;
+  }
+}
