--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,11 +1,20 @@
 .footer__title {
-  padding: 60px 588px;
-  margin: 0;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1;
+  padding: 60px;
+  margin: 0 auto;
   width: 104px;
   height: 16px;
   color: rgba(33, 33, 33, 0.7);
-  font-family: Poppins;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 16px;
+}
+
+@media screen and (max-width: 672px) {
+  .footer {
+    width: 100%;
+    line-height: 16px;
+    padding: 20px 0;
+    margin: 0 auto;
+    height: auto;
+  }
 }
