--- a/blocks/header.css
+++ b/blocks/header.css
@@ -6,6 +6,11 @@
 }
 
 .header__logo {
+  font-family: DM Mono;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 26.04px;
+  letter-spacing: 0.2em;
   margin: 0 auto;
   width: 94px;
   height: 26px;
