--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,5 +1,5 @@
 .card {
-  width: 413px;
+  width: 100%;
 }
 
 .card__image {
@@ -15,13 +15,14 @@
   align-items: center;
   justify-content: space-between;
   padding: 0;
+  margin-top: 12px;
 }
 
 .card__title {
   font-size: 20px;
   font-weight: 500;
   line-height: 24px;
-  margin: 12px 0 36px;
+  margin: 0;
   color: rgba(33, 33, 33, 1);
   text-overflow: ellipsis;
   overflow: hidden;
@@ -32,12 +33,19 @@
 }
 
 .card__like-button {
-  background-image: url(../images/Like\ Icon.svg);
+  background-image: url(../images/Union.png);
   width: 23px;
   height: 20px;
   background-color: transparent;
   border: none;
   opacity: 40%;
+  cursor: pointer;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.card__like-button:hover {
+  opacity: 100%;
 }
 
 @media screen and (max-width: 672px) {
@@ -47,7 +55,6 @@
   }
 
   .card__title {
-    margin: 12px 0 20px;
     font-size: 16px;
     line-height: 1;
   }
