--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,5 +1,5 @@
 .cards {
-  padding-top: 20px;
+  padding: 20px 0 40px;
   border-bottom: 1px solid rgba(33, 33, 33, 0.4);
 }
 
@@ -10,11 +10,13 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, 413px);
   gap: 40px 20px;
+  justify-content: center;
 }
 
 @media screen and (max-width: 672px) {
   .cards__list {
     grid-template-columns: repeat(auto-fit, 288px);
+    gap: 20px;
   }
 
   .cards {
