--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -4,8 +4,7 @@
   line-height: 1;
   padding: 60px;
   margin: 0 auto;
-  width: 104px;
-  height: 16px;
+  max-width: 104px;
   color: rgba(33, 33, 33, 0.7);
 }
 
@@ -15,6 +14,5 @@
     line-height: 16px;
     padding: 20px 0;
     margin: 0 auto;
-    height: auto;
   }
 }
