--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,19 +1,20 @@
 .profile {
   display: flex;
-  padding: 34px 0 20px;
+  padding: 34px 0 0;
   border-bottom: 1px solid rgba(33, 33, 33, 0.4);
+  padding-bottom: 20px;
 }
 
-.profile__Avatar {
+.profile__avatar {
   margin-right: 20px;
   width: 190px;
   height: 190px;
-  border-radius: 8px 0px 0px 0px;
+  border-radius: 8px;
+  object-fit: cover;
 }
 
 .profile__column {
   max-width: 420px;
-  max-height: 190px;
   display: flex;
   flex-direction: column;
 }
@@ -22,8 +23,7 @@
   font-size: 32px;
   line-height: 1;
   font-weight: 500;
-  width: 420px;
-  height: 32px;
+  max-width: 420px;
   margin: 0 0 12px;
   color: rgba(33, 33, 33, 1);
   text-overflow: ellipsis;
@@ -32,15 +32,13 @@
   display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
-  max-width: 420px;
 }
 
 .profile__description {
   font-size: 16px;
   font-weight: 500;
   line-height: 1;
-  width: 97px;
-  height: 16px;
+  max-width: 97px;
   margin: 0;
   color: rgba(33, 33, 33, 0.7);
   text-overflow: ellipsis;
@@ -65,6 +63,12 @@
   color: rgba(33, 33, 33, 1);
   background-color: #fcf5e5;
   border: none;
+  opacity: 0.7;
+  cursor: pointer;
+}
+
+.profile__edit-button:hover {
+  opacity: 1;
 }
 
 .profile__add-button {
@@ -77,45 +81,55 @@
   margin-left: auto;
   height: 52px;
   margin-top: 138px;
-  margin-bottom: 20px;
   background: rgba(33, 33, 33, 1);
   padding: 18px 32px 18px 32px;
-  border-radius: 8px 0px 0px 0px;
+  border-radius: 8px;
   color: rgba(252, 245, 229, 1);
   gap: 8px;
   cursor: pointer;
+  justify-content: center;
+}
+
+.profile__add-button:hover {
+  opacity: 0.8;
 }
 
 @media screen and (max-width: 672px) {
   .profile {
     padding: 20px 16px;
-    width: 288px;
-    height: 274px;
+    max-width: 288px;
     flex-direction: column;
     align-items: center;
   }
 
-  .profile__Avatar {
+  .profile__avatar {
     width: 80px;
     height: 80px;
     margin: 0 auto 12px;
   }
 
   .profile__title {
-    width: 288px;
     margin: 0 0 6px;
     font-size: 20px;
     line-height: 1;
     text-align: center;
     max-width: 288px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    max-width: 288px;
   }
 
   .profile__description {
-    width: 288px;
+    max-width: 288px;
     font-size: 16px;
     line-height: 1;
     margin: 0 auto;
     text-align: center;
+    max-width: 288px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
     max-width: 288px;
   }
 
@@ -124,7 +138,7 @@
   }
 
   .profile__add-button {
-    margin: 20px 0;
+    margin: 0;
     width: 288px;
   }
 }
