--- a/blocks/card.css
+++ b/blocks/card.css
@@ -26,14 +26,12 @@
   color: rgba(33, 33, 33, 1);
   text-overflow: ellipsis;
   overflow: hidden;
-  line-clamp: 3;
-  display: -webkit-box;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
+  white-space: nowrap;
+  max-width: 350px;
 }
 
 .card__like-button {
-  background-image: url(../images/Union.png);
+  background-image: url(../images/Union.svg);
   width: 23px;
   height: 20px;
   background-color: transparent;
@@ -49,6 +47,11 @@
 }
 
 @media screen and (max-width: 672px) {
+  .card__like-button {
+    width: 20px;
+    height: 18px;
+  }
+
   .card__image {
     width: 288px;
     height: 288px;
@@ -57,5 +60,6 @@
   .card__title {
     font-size: 16px;
     line-height: 1;
+    max-width: 250px;
   }
 }
