--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -24,6 +24,7 @@
   max-width: 730px;
   position: relative;
   box-sizing: border-box;
+  border-radius: 8px;
 }
 
 .modal__button-close {
@@ -34,6 +35,7 @@
   height: 40px;
   padding: 0;
   opacity: 40%;
+  cursor: pointer;
 }
 
 .modal__title {
@@ -69,6 +71,7 @@
   font-size: 16px;
   font-weight: 500;
   line-height: 1;
+  cursor: pointer;
 }
 
 .modal__input {
@@ -77,6 +80,12 @@
   border-radius: 8px;
   padding: 16px 12px;
   box-sizing: border-box;
+  color: rgba(33, 33, 33, 1);
+  border: 1px solid rgba(33, 33, 33, 0.4);
+}
+
+.modal__input:hover {
+  border: 1px solid rgba(33, 33, 33, 1);
 }
 
 .modal__input::placeholder {
@@ -103,9 +112,8 @@
   }
 
   .modal__title {
-    margin: 0 0 24px;
+    margin: 10px 0 24px;
     font-size: 20px;
-    line-height: 1;
     max-width: 106px;
   }
 
