--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -36,6 +36,12 @@
   padding: 0;
   opacity: 40%;
   cursor: pointer;
+  border: none;
+  background-color: #fff;
+}
+
+.modal__button-close:hover {
+  opacity: 1;
 }
 
 .modal__title {
@@ -72,6 +78,7 @@
   font-weight: 500;
   line-height: 1;
   cursor: pointer;
+  border-radius: 8px;
 }
 
 .modal__input {
@@ -82,6 +89,9 @@
   box-sizing: border-box;
   color: rgba(33, 33, 33, 1);
   border: 1px solid rgba(33, 33, 33, 0.4);
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1;
 }
 
 .modal__input:hover {
@@ -123,6 +133,7 @@
 
   .modal__input {
     height: 48px;
+    font-size: 16px;
   }
 
   .modal__input::placeholder {
