--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,5 +1,7 @@
 .card {
   width: 100%;
+  position: relative;
+  display: inline-block;
 }
 
 .card__image {
@@ -8,6 +10,7 @@
   object-fit: cover;
   display: block;
   border-radius: 8px;
+  cursor: pointer;
 }
 
 .card__content {
@@ -46,6 +49,31 @@
   opacity: 100%;
 }
 
+.card__like-button_liked {
+  background-image: url(../images/liked_button.svg);
+  opacity: 1;
+}
+
+.card__like-button_liked:hover {
+  background-image: url(../images/likedbutton_hover.svg);
+}
+
+.card__delete-button {
+  background-image: url(../images/Delete_Icon_grey.svg);
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  border: none;
+  width: 32px;
+  height: 32px;
+  cursor: pointer;
+  background-color: transparent;
+}
+
+.card__delete-button_clicked {
+  background-image: url(../images/Delete_Icon_clicked.svg);
+}
+
 @media screen and (max-width: 672px) {
   .card__like-button {
     width: 20px;
@@ -61,5 +89,12 @@
     font-size: 16px;
     line-height: 1;
     max-width: 250px;
+  }
+
+  .card__delete-button {
+    width: 24px;
+    height: 24px;
+    top: 4px;
+    right: 4px;
   }
 }
