--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -11,10 +11,13 @@
   right: 0;
   visibility: hidden;
   padding: 0 16px;
+  opacity: 0;
+  transition: opacity 0.5s linear;
 }
 
-.modal_opened {
+.modal_is-opened {
   visibility: visible;
+  opacity: 1;
 }
 
 .modal__container {
@@ -25,6 +28,15 @@
   position: relative;
   box-sizing: border-box;
   border-radius: 8px;
+}
+
+.modal__container_type_preview {
+  padding: 0;
+  margin: 81px auto 40px;
+  background-color: transparent;
+  border-radius: 8px;
+  position: relative;
+  max-width: fit-content;
 }
 
 .modal__button-close {
@@ -42,6 +54,22 @@
 
 .modal__button-close:hover {
   opacity: 1;
+}
+
+.modal__button-close_type_preview {
+  width: 40;
+  height: 40;
+  top: 0;
+  right: -57.5px;
+  border: none;
+  background-color: transparent;
+  opacity: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.modal__button-close_type_preview:hover {
+  border: solid 4px rgba(160, 32, 240, 1);
 }
 
 .modal__title {
@@ -106,6 +134,31 @@
   color: #212121;
   opacity: 30%;
 }
+.modal__image {
+  max-width: 80vw;
+  max-height: 80vh;
+  width: 100%;
+  object-fit: contain;
+
+  padding: 0;
+  border-radius: 8px;
+}
+
+.modal__caption {
+  margin-top: 12px;
+  height: 32;
+  min-width: 135px;
+  max-width: fit-content;
+  white-space: nowrap;
+  overflow: hidden;
+  border-radius: 8px;
+  padding: 4px 8px;
+  background-color: rgba(33, 33, 33, 1);
+  color: rgba(255, 255, 255, 1);
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+}
 
 @media screen and (max-width: 672px) {
   .modal {
@@ -116,9 +169,26 @@
     padding: 12px;
   }
 
+  .modal__container_type_preview {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .modal__image {
+    border-radius: 4px;
+    max-width: 100%;
+    max-height: 60vh;
+    position: relative;
+  }
+
   .modal__button-close {
     top: 12px;
     right: 12px;
+  }
+
+  .modal__button-close_type_preview {
+    position: absolute;
+    top: -32px;
   }
 
   .modal__title {
