--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -190,8 +190,8 @@
   .modal__button-close_type_preview {
     position: absolute;
     top: -32px;
-    background-color: black;
     opacity: 1;
+    right: -3px;
   }
 
   .modal__button-close_type_preview:hover {
