--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -5,6 +5,29 @@
   padding-bottom: 20px;
 }
 
+.profile__avatar-container {
+  position: relative;
+}
+
+.profile__avatar-btn {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  visibility: hidden;
+  /* todo- finish avatar button styles */
+}
+
+.profile__avatar-container:hover .profile__avatar-btn {
+  visibility: visible;
+}
+
+.profile__avatar-btn::after {
+  content: "Edit Avatar";
+}
+
 .profile__avatar {
   margin-right: 20px;
   width: 190px;
@@ -101,6 +124,11 @@
     flex-direction: column;
     align-items: center;
   }
+
+  .profile__avatar-btn {
+    visibility: visible;
+  }
+  /* set content of :: after element to empty string"" */
 
   .profile__avatar {
     width: 80px;
