--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -22,6 +22,9 @@
 
 .profile__avatar-container:hover .profile__avatar-btn {
   visibility: visible;
+  background: rgba(0, 0, 0, 0.5);
+  border: none;
+  cursor: pointer;
 }
 
 .profile__avatar-btn::after {
