--- a/src/blocks/cards.css
+++ b/src/blocks/cards.css
@@ -1,25 +1,25 @@
 .cards {
-  padding: 20px 0 40px;
-  border-bottom: 1px solid rgba(33, 33, 33, 0.4);
+  padding-bottom: 40px;
+  border-bottom: solid rgba(33, 33, 33, 0.4) 1px;
 }
 
 .cards__list {
-  list-style-type: none;
+  list-style: none;
   padding: 0;
   margin: 0;
   display: grid;
   grid-template-columns: repeat(auto-fit, 413px);
-  gap: 40px 20px;
+  column-gap: 20px;
+  row-gap: 40px;
   justify-content: center;
 }
 
-@media screen and (max-width: 672px) {
+@media screen and (max-width: 627px) {
+  .cards {
+    padding-bottom: 20px;
+  }
   .cards__list {
     grid-template-columns: repeat(auto-fit, 288px);
-    gap: 20px;
-  }
-
-  .cards {
-    padding: 20px 16px;
+    row-gap: 20px;
   }
 }
