--- a/src/blocks/footer.css
+++ b/src/blocks/footer.css
@@ -1,9 +1,13 @@
-.footer__title {
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1;
-  padding: 60px;
-  margin: 0 auto;
-  max-width: 104px;
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer__content {
+  margin: 60px 0;
   color: rgba(33, 33, 33, 0.7);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1;
 }
