--- a/src/blocks/modal.css
+++ b/src/blocks/modal.css
@@ -1,243 +1,321 @@
 .modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+
   background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  align-items: center;
   visibility: hidden;
-  padding: 0 16px;
   opacity: 0;
-  transition: opacity 0.5s linear;
+  padding: 0 10px;
+  transition: visibility 0s linear 0.5s, opacity 0.5s linear;
 }
 
-.modal_is-opened {
+.modal__close {
+  height: 40px;
+  width: 40px;
+  cursor: pointer;
+  background-repeat: no-repeat;
+  background-position: center;
+  padding: 0;
+  border: none;
+}
+
+.modal_is-open {
   visibility: visible;
   opacity: 1;
-}
-
-.modal__container {
-  background-color: #fff;
-  padding: 32px 50px;
-  width: 100%;
-  max-width: 730px;
-  position: relative;
-  box-sizing: border-box;
-  border-radius: 8px;
-}
-
-.modal__container_type_preview {
-  padding: 0;
-  margin: 81px auto 40px;
-  background-color: transparent;
-  border-radius: 8px;
-  position: relative;
-  max-width: fit-content;
-}
-
-.modal__button-close {
-  position: absolute;
-  top: 32px;
-  right: 50px;
-  width: 40px;
-  height: 40px;
-  padding: 0;
-  opacity: 40%;
-  cursor: pointer;
-  border: none;
-  background-color: #fff;
-}
-
-.modal__button-close:hover {
-  opacity: 1;
-}
-
-.modal__button-close_type_preview {
-  width: 40;
-  height: 40;
-  top: 0;
-  right: -57.5px;
-  border: none;
-  background-color: transparent;
-  opacity: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  opacity: 0.4;
-}
-.modal__button-close_type_preview:hover {
-  border: solid 4px rgba(160, 32, 240, 1);
+  transition-delay: 0s;
 }
 
 .modal__title {
-  margin: 0 0 32px;
-  width: 169px;
-  font-size: 32px;
+  color: #212121;
+  margin: 4px 0 36px;
+  padding: 0;
   font-weight: 500;
+  font-size: 32px;
   line-height: 1;
-  color: rgba(33, 33, 33, 1);
 }
 
-.modal__label {
+.modal__container {
+  box-sizing: border-box;
+  background-color: #fff;
+  padding: 32px 50px;
   display: flex;
   flex-direction: column;
-  gap: 8px;
-  margin-bottom: 32px;
-  color: rgba(33, 33, 33, 0.7);
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 17.6px;
-}
-
-.modal__button-submit {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  max-width: 730px;
   width: 100%;
-  max-width: 156px;
-  background: rgba(33, 33, 33, 1);
-  color: rgba(252, 245, 229, 1);
-  height: 52px;
-  gap: 8px;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1;
-  cursor: pointer;
+  position: relative;
   border-radius: 8px;
 }
 
-.modal__button-submit_inactive {
-  opacity: 50%;
+.modal__profile-exit-button,
+.modal__post-exit-button {
+  position: absolute;
+  top: 32px;
+  right: 50px;
+  background-image: url(../images/Close_Icon_preview.svg);
+  background-color: #fff;
+  opacity: 40%;
 }
 
-.modal__input {
-  width: 100%;
-  height: 52px;
+.modal__profile-exit-button:hover,
+.modal__post-exit-button:hover {
+  opacity: 1;
+}
+
+.modal__container-preview {
+  position: relative;
+}
+
+.modal__preview-exit-button {
+  position: absolute;
+  top: 0;
+  right: -52.57px;
+  background-image: url(../images/Close.svg);
+  background-color: transparent;
+}
+
+.modal__preview-exit-button:hover {
+  opacity: 40%;
+}
+
+.modal__preview-image {
   border-radius: 8px;
-  padding: 16px 12px;
   box-sizing: border-box;
-  color: rgba(33, 33, 33, 1);
-  border: 1px solid rgba(33, 33, 33, 0.4);
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1;
-  display: block;
-}
-
-.modal__input_type_error {
-  border: 1px solid rgba(255, 0, 0, 0.6);
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 110.00000000000001%;
-}
-
-.modal__input:hover {
-  border: 1px solid rgba(33, 33, 33, 1);
-}
-
-.modal__input::placeholder {
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 1;
-  box-sizing: border-box;
-  color: #212121;
-  opacity: 30%;
-}
-
-.modal__error {
-  color: red;
-  margin-top: 8px;
-  display: block;
-}
-
-.modal__image {
+  background-color: none;
   max-width: 80vw;
   max-height: 80vh;
-  width: 100%;
-  object-fit: contain;
-
-  padding: 0;
-  border-radius: 8px;
 }
 
-.modal__caption {
-  margin-top: 12px;
-  height: 32;
-  min-width: 135px;
-  max-width: fit-content;
-  white-space: nowrap;
-  overflow: hidden;
-  border-radius: 8px;
+.modal__preview-desc-frame {
+  background: rgba(33, 33, 33, 1);
   padding: 4px 8px;
-  background-color: rgba(33, 33, 33, 1);
+  border-radius: 8px;
+  position: absolute;
+  left: 0;
+  top: calc(100% + 8px);
+}
+
+.modal__preview-desc {
   color: rgba(255, 255, 255, 1);
   font-weight: 500;
+  margin: 0;
   font-size: 20px;
   line-height: 24px;
 }
 
-@media screen and (max-width: 672px) {
-  .modal {
-    padding: 0 10px;
-  }
+.modal__form {
+  display: flex;
+  flex-direction: column;
+}
 
+.modal__container-delete {
+  width: 630px;
+  padding: 32px 20px;
+}
+.modal__delete-exit-button {
+  position: absolute;
+  top: 0;
+  right: -52px;
+  background-image: url(../images/Close_Icon_preview.svg);
+  background-color: transparent;
+}
+
+.modal__form-delete {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 20px;
+}
+
+.modal__title-delete {
+  margin: 0 0 32px;
+  font-size: 24px;
+  line-height: 1;
+  text-align: center;
+}
+
+.modal__delete-button {
+  width: 156px;
+  padding: 18px 32px;
+  border-radius: 8px;
+  background-color: rgb(255, 101, 101);
+  color: #fff;
+  cursor: pointer;
+  border: none;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1;
+}
+
+.modal__delete-button:hover {
+  background-color: rgb(255, 51, 51);
+}
+
+.modal__cancel-button {
+  width: 156px;
+  padding: 18px 32px;
+  border-radius: 8px;
+  background-color: #fff;
+  color: rgb(33, 33, 33);
+  cursor: pointer;
+  border: solid 1px rgb(33, 33, 33);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1;
+}
+
+.modal__cancel-button:hover {
+  background-color: rgb(33, 33, 33);
+  color: #fff;
+}
+
+.modal__label {
+  margin: 0;
+  color: rgba(33, 33, 33, 0.7);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.1;
+  margin-bottom: 32px;
+  display: block;
+}
+.modal__input {
+  box-sizing: border-box;
+  display: block;
+  margin: 8px 0 0 0;
+  max-width: 630px;
+  width: 100%;
+  padding: 16px 12px;
+  border: solid 1px rgba(33, 33, 33, 0.4);
+  border-radius: 8px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1;
+}
+
+.modal__input::placeholder {
+  opacity: 30%;
+  color: #212121;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1;
+}
+
+.modal__input:hover {
+  border: solid 1px rgba(33, 33, 33, 1);
+}
+
+.modal__input_state_error {
+  border: 1px solid rgba(255, 0, 0, 0.6);
+}
+
+.modal__error {
+  display: block;
+  color: #ff0000;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 17.6px;
+  margin-top: 8px;
+}
+
+.modal__save-button {
+  width: 156px;
+  padding: 18px 32px;
+  border-radius: 8px;
+  background-color: #212121;
+  color: #fff;
+  cursor: pointer;
+  border: none;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1;
+}
+
+.modal__save-button_inactive {
+  opacity: 0.5;
+}
+
+.modal__save-button:hover {
+  opacity: 0.8;
+}
+
+@media screen and (max-width: 627px) {
   .modal__container {
+    max-width: 300px;
     padding: 12px;
   }
 
-  .modal__container_type_preview {
-    display: flex;
-    flex-direction: column;
-    padding: 6px;
+  .modal__title {
+    font-size: 20px;
+    margin: 10px 0 34px;
   }
 
-  .modal__image {
-    border-radius: 4px;
-    max-width: 100%;
-    position: relative;
-  }
-
-  .modal__button-close {
+  .modal__close {
     top: 12px;
     right: 12px;
   }
 
-  .modal__button-close_type_preview {
-    position: absolute;
-    top: -32px;
-    opacity: 1;
-    right: -3px;
+  .modal__input::placeholder {
+    font-size: 16px;
   }
 
-  .modal__button-close_type_preview:hover {
-    border: solid 4px rgba(160, 32, 240, 1);
-  } /* This hover isn't working nicely, help me with this*/
-
-  .modal__title {
-    margin: 10px 0 24px;
-    font-size: 20px;
-    max-width: 106px;
-  }
-
-  .modal__label {
-    margin-bottom: 24px;
+  .modal__save-button {
+    width: 100%;
   }
 
   .modal__input {
-    height: 48px;
-    font-size: 16px;
+    margin: 8px 0 24px 0;
   }
 
-  .modal__input::placeholder {
-    font-size: 16px;
-    line-height: 1;
+  .modal__preview-exit-button {
+    margin: 0 16px 8px auto;
+    right: 0;
+    top: -48px;
   }
 
-  .modal__button-submit {
-    max-width: 276px;
+  .modal__preview-image {
+    max-width: 288px;
+    margin: 0 16px 0;
+  }
+
+  .modal__preview-desc {
+    font-size: 16px;
+    line-height: 19.2px;
+  }
+
+  .modal__preview-desc-frame {
+    margin-left: 16px;
+    box-sizing: border-box;
+    max-width: 288px;
+  }
+
+  .modal__container-delete {
+    width: 300px;
+    padding: 12px;
+  }
+
+  .modal__form-delete {
+    flex-direction: column;
+    gap: 0;
+    align-items: center;
+  }
+
+  .modal__delete-exit-button {
+    top: -56px;
+    right: 6px;
+  }
+
+  .modal__delete-button {
+    margin-bottom: 12px;
+  }
+
+  .modal__title-delete {
+    font-size: 20px;
+    line-height: 24px;
   }
 }
