--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -1,96 +1,109 @@
 .profile {
   display: flex;
-  padding: 34px 0 0;
-  border-bottom: 1px solid rgba(33, 33, 33, 0.4);
-  padding-bottom: 20px;
+  padding: 34px 0 20px;
+  border-bottom: solid rgba(33, 33, 33, 0.4) 1px;
+  margin-bottom: 20px;
 }
 
 .profile__avatar-container {
   position: relative;
 }
 
-.profile__avatar-btn {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-  visibility: hidden;
-  /* todo- finish avatar button styles */
+.profile__avatar-container:hover .profile__avatar-btn {
+  background-color: rgba(0, 0, 0, 0.5);
+  visibility: visible;
+  cursor: pointer;
 }
 
-.profile__avatar-container:hover .profile__avatar-btn {
-  visibility: visible;
-  background: rgba(0, 0, 0, 0.5);
+.profile__avatar-btn {
+  position: absolute;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  height: calc(100% - 3.9px);
+  width: calc(100% - 20px);
   border: none;
-  cursor: pointer;
+  padding: 0;
+  background: none;
+  border-radius: 8px;
+  gap: 8px;
+  visibility: hidden;
 }
 
 .profile__avatar-btn::after {
   content: "Edit Avatar";
+  margin: 0 auto 12px 0;
+  color: rgb(255, 255, 255);
+  line-height: 16px;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.profile__pencil-icon {
+  margin: 0 0 12px auto;
 }
 
 .profile__avatar {
-  margin-right: 20px;
-  width: 190px;
   height: 190px;
+  width: 190px;
+  margin: 0 20px 0 0;
   border-radius: 8px;
-  object-fit: cover;
 }
 
 .profile__column {
-  max-width: 420px;
   display: flex;
   flex-direction: column;
 }
 
-.profile__title {
+.profile__name {
+  margin: 0 0 12px 0;
+  font-weight: 500;
   font-size: 32px;
   line-height: 1;
-  font-weight: 500;
-  max-width: 420px;
-  margin: 0 0 12px;
-  color: rgba(33, 33, 33, 1);
+  color: #212121;
   text-overflow: ellipsis;
   overflow: hidden;
-  line-clamp: 3;
   display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
+  max-width: 420px;
+  width: 100%;
 }
 
 .profile__description {
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1;
-  max-width: 97px;
   margin: 0;
+  font-size: 16px;
+  line-height: 1;
   color: rgba(33, 33, 33, 0.7);
   text-overflow: ellipsis;
   overflow: hidden;
-  line-clamp: 3;
   display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
-  max-width: 420px;
+  max-width: 90%;
+  font-weight: 500;
 }
 
 .profile__edit-button {
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1;
-  margin-top: auto;
-  margin-right: auto;
+  margin: auto 0 0;
+  color: #212121;
+  background: none;
+  border: none;
+  cursor: pointer;
   padding: 0;
-  gap: 8px;
   display: flex;
   align-items: center;
-  color: rgba(33, 33, 33, 1);
-  background-color: #fcf5e5;
-  border: none;
+  gap: 8px;
   opacity: 0.7;
-  cursor: pointer;
+  font-size: 16px;
+  line-height: 1;
+}
+
+.profile__edit-button::before {
+  content: "";
+  width: 16px;
+  height: 16px;
+  background-image: url(../images/pencil.svg);
 }
 
 .profile__edit-button:hover {
@@ -98,66 +111,97 @@
 }
 
 .profile__add-button {
-  font-family: "poppins", Arial, Helvetica, sans-serif;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1;
+  margin-left: auto;
+  margin-top: auto;
+  background-color: #212121;
+  color: #fcf5e5;
+  border-radius: 8px;
   display: flex;
   align-items: center;
-  margin-left: auto;
-  height: 52px;
-  margin-top: 138px;
-  background: rgba(33, 33, 33, 1);
-  padding: 18px 32px 18px 32px;
-  border-radius: 8px;
-  color: rgba(252, 245, 229, 1);
+  padding: 18px 32px;
   gap: 8px;
-  cursor: pointer;
-  justify-content: center;
+  border: none;
+  font-weight: 500;
+  line-height: 1;
+  font-size: 16px;
+  white-space: nowrap;
+}
+
+.profile__add-button::before {
+  content: "";
+  width: 16px;
+  height: 16px;
+  background-image: url(../images/plus.svg);
+  background-size: 100% 100%;
 }
 
 .profile__add-button:hover {
   opacity: 0.8;
+  cursor: pointer;
 }
 
-@media screen and (max-width: 672px) {
+.profile__plus-icon {
+  width: 12px;
+  height: 12px;
+}
+
+@media screen and (max-width: 627px) {
   .profile {
-    padding: 20px 16px;
-    max-width: 288px;
     flex-direction: column;
     align-items: center;
+    padding-top: 20px;
+    max-width: 288px;
   }
-
-  .profile__avatar-btn {
-    visibility: visible;
-  }
-  /* set content of :: after element to empty string"" */
 
   .profile__avatar {
     width: 80px;
     height: 80px;
-    margin: 0 auto 12px;
+    margin-right: 0;
+    margin-bottom: 12px;
   }
 
-  .profile__title {
-    margin: 0 0 6px;
+  .profile__avatar-btn {
+    visibility: visible;
+    height: calc(100%-16px);
+    width: 100%;
+  }
+  .profile__pencil-icon {
+    margin: 0;
+    position: absolute;
+    top: 52px;
+    left: 52px;
+    border-radius: 6px;
+    padding: 4px;
+    background-color: rgba(33, 33, 33, 0.6);
+  }
+
+  .profile__avatar-btn::after {
+    display: none;
+    justify-content: flex-end;
+  }
+
+  .profile__column {
+    align-items: center;
+  }
+
+  .profile__name {
+    margin-bottom: 6px;
     font-size: 20px;
+    max-width: 100%;
     text-align: center;
-    max-width: 288px;
   }
 
   .profile__description {
-    max-width: 288px;
-    margin: 0 auto;
+    margin-bottom: 32px;
     text-align: center;
   }
 
   .profile__edit-button {
-    margin: 32px auto 20px;
+    margin-bottom: 20px;
   }
 
   .profile__add-button {
-    margin: 0;
-    width: 288px;
+    width: 100%;
+    justify-content: center;
   }
 }
