--- a/src/blocks/modal.css
+++ b/src/blocks/modal.css
@@ -58,7 +58,7 @@
   position: absolute;
   top: 32px;
   right: 50px;
-  background-image: url(../images/Close_Icon_preview.svg);
+  background-image: url(../images/profile-exit.svg);
   background-color: #fff;
   opacity: 40%;
 }
